--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <div class="container">
         <header class="header">
             <nav class="navbar">
-                <div class="navbar--logo"><img src="/assets/Reservia.svg" alt="logo"></div>
+                <div class="navbar--logo"><img src="./assets/Reservia.svg" alt="logo"></div>
                 <div class="navbar--login"><p class="navbar--login-txt">S'inscrire</p></div>
-                <div class="navbar__nav">
-                    <a href="#hebergements" class="navbar__nav--link">Hébergements</a>
-                    <a href="#activite" class="navbar__nav--link">Activités</a>
-                </div>
+                <ul class="navbar__nav">
+                    <li class="navbar__nav--link"><a href="#hebergements" >Hébergements</a></li>
+                    <li class="navbar__nav--link"><a href="#activite">Activités</a></li>
+                </ul>
             </nav>
             <div class="search">
                 <h3 class="search--titre" >Trouvez votre hébergement pour des vacances de rêve</h3>
