stylling de la partie search mobile

--- a/index.html
+++ b/index.html
@@ -24,33 +24,33 @@
                 <h2 class="search--titre" >Trouvez votre hébergement pour des vacances de rêve</h2>
                 <p class="search--sous-titre" >En plein centre ville ou en plaine nature</p>
                 <div class="search__box">
-                    <div class="search__box--icon" ><i class="fas fa-solid fa-location-arrow"></i></div>
+                    <div class="search__box--icon" ><i class="fas fa-map-marker-alt fa-lg"></i></div>
                     <input class="search__box--input" type="text">
-                    <button class="search__box--btn" ><span>Rechercher</span><i class="fa-solid fa-magnifying-glass"></i></button>
+                    <button class="search__box--btn" ><i class="fas fa-search fa-lg"></i><span>Rechercher</span></button>
                 </div>
                 <div class="search__filters">
                     <h3>Filtres</h3>
                     <div class="search__filters__element">
-                        <a href="" class="search__filters__element--item">
-                            <i class="fas fa-solid fa-money-bill-wave"></i>
+                        <div class="search__filters__element--item">
+                            <div class="search__filters__element--icon"><i class="fas fa-solid fa-money-bill-wave blue"></i></div>
                             <p>Economique</p>
-                        </a>
-                        <a href="" class="search__filters__element--item">
-                            <i class="fas fa-solid fa-child"></i>
+                        </div>
+                        <div class="search__filters__element--item">
+                            <div class="search__filters__element--icon"><i class="fas fa-solid fa-child blue"></i></div>
                             <p>Familial</p>
-                        </a>
-                        <a href="" class="search__filters__element--item">
-                            <i class="fas fa-solid fa-heart search__filters__element--item--icon"></i>
+                        </div>
+                        <div class="search__filters__element--item">
+                            <div class="search__filters__element--icon"><i class="fas fa-solid fa-heart blue"></i></div>
                             <p>Romantique</p>
-                        </a>
-                        <a href="" class="search__filters__element--item">
-                            <i class="fas fa-solid fa-dog search__filters__element--item--icon"></i>
+                        </div>
+                        <div class="search__filters__element--item">
+                            <div class="search__filters__element--icon"><i class="fas fa-solid fa-dog blue"></i></div>
                             <p>Animaux autorisés</p>
-                        </a>
+                        </div>
                     </div>
                 </div>
             </div>
-            <i class="fas fa-solid fa-info"></i><p>Plus de 500 logements sont disponibles dans cette ville</p>
+            <div class="search__info"><i class="fas fa-solid fa-info fa-xs"></i><p>Plus de 500 logements sont disponibles dans cette ville</p></div>
         </header>
 
         <aside class="populaire" >
