--- a/index.html
+++ b/index.html
@@ -50,16 +50,20 @@
                     </div>
                 </div>
             </div>
-            <div class="search__info"><i class="fas fa-solid fa-info fa-xs"></i><p>Plus de 500 logements sont disponibles dans cette ville</p></div>
+            <div class="search__info"><div class="search__info--icon" ><i class="fas fa-solid fa-info fa-xs"></i></div><p>Plus de 500 logements sont disponibles dans cette ville</p></div>
         </header>
 
         <aside class="populaire" >
             <div class="populaire__titre">
                 <h3 class="populaire__titre--txt">Les plus populaires</h3><i class="fas fa-chart-line"></i>
             </div>
-            <div class="populaire--card">
-                <div class="populaire--card-img"></div>
-                <div class="populaire--card-description">
+            <div class="populaire__card">
+                <picture class="populaire__card--img">
+                    <source srcset="./assets/hotel_soleil_matin_m.jpg" media="(min-width: 375px)">
+                    <source srcset="/.assets/hotel_soleil_matin_l.jpg" media="(min-width: 900px)">
+                    <img src="./assets/hotel_soleil_matin_s.jpg" alt="">
+                </picture>
+                <div class="populaire__card--description">
                     <h5>Hôtel Le soleil du matin</h5>
                     <p>Nuit à partir de 128€</p>
                     <ul class="etoiles">
@@ -71,9 +75,9 @@
                     </ul>
                 </div>
             </div>
-            <div class="populaire--card">
-                <div class="populaire--card-img"></div>
-                <div class="populaire--card-description">
+            <div class="populaire__card">
+                <div class="populaire__card--img"></div>
+                <div class="populaire__card--description">
                     <h5>Au coeur de l'eau Chambre d'hôtes</h5>
                     <p>Nuit à partir de 71€</p>
                     <ul class="etoiles">
@@ -85,9 +89,9 @@
                     </ul>
                 </div>
             </div>
-            <div class="populaire--card">
-                <div class="populaire--card-img"></div>
-                <div class="populaire--card-description">
+            <div class="populaire__card">
+                <div class="populaire__card--img"></div>
+                <div class="populaire__card--description">
                     <h5>Hôtel tout bleu et Blanc</h5>
                     <p>Nuit à partir de 68€</p>
                     <ul class="etoiles">
