stylling des cards du bloc aside

--- a/index.html
+++ b/index.html
@@ -76,7 +76,11 @@
                 </div>
             </div>
             <div class="populaire__card">
-                <div class="populaire__card--img"></div>
+                <picture class="populaire__card--img">
+                    <source srcset="./assets/hotel_soleil_matin_m.jpg" media="(min-width: 375px)">
+                    <source srcset="/.assets/hotel_soleil_matin_l.jpg" media="(min-width: 900px)">
+                    <img src="./assets/hotel_soleil_matin_s.jpg" alt="">
+                </picture>
                 <div class="populaire__card--description">
                     <h5>Au coeur de l'eau Chambre d'hôtes</h5>
                     <p>Nuit à partir de 71€</p>
@@ -90,7 +94,11 @@
                 </div>
             </div>
             <div class="populaire__card">
-                <div class="populaire__card--img"></div>
+                <picture class="populaire__card--img">
+                    <source srcset="./assets/hotel_soleil_matin_m.jpg" media="(min-width: 375px)">
+                    <source srcset="/.assets/hotel_soleil_matin_l.jpg" media="(min-width: 900px)">
+                    <img src="./assets/hotel_soleil_matin_s.jpg" alt="">
+                </picture>
                 <div class="populaire__card--description">
                     <h5>Hôtel tout bleu et Blanc</h5>
                     <p>Nuit à partir de 68€</p>
