--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <img src="./assets/hotel_soleil_matin_s.jpg" alt="">
                 </picture>
                 <div class="populaire__card--description">
-                    <h5>Hôtel Le soleil du matin</h5>
+                    <h3>Hôtel Le soleil du matin</h3>
                     <p>Nuit à partir de 128€</p>
                     <ul class="etoiles">
                         <li><i class="fas fa-star"></i></li>
@@ -77,37 +77,37 @@
             </div>
             <div class="populaire__card">
                 <picture class="populaire__card--img">
-                    <source srcset="./assets/hotel_soleil_matin_m.jpg" media="(min-width: 375px)">
-                    <source srcset="/.assets/hotel_soleil_matin_l.jpg" media="(min-width: 900px)">
-                    <img src="./assets/hotel_soleil_matin_s.jpg" alt="">
+                    <source srcset="./assets/au_coeur_de_leau_m.jpg" media="(min-width: 375px)">
+                    <source srcset="/.assets/au_coeur_de_leau_l.jpg" media="(min-width: 900px)">
+                    <img src="./assets/au_coeur_de_leau_s.jpg" alt="">
                 </picture>
                 <div class="populaire__card--description">
-                    <h5>Au coeur de l'eau Chambre d'hôtes</h5>
+                    <h4>Au coeur de l'eau Chambre d'hôtes</h4>
                     <p>Nuit à partir de 71€</p>
                     <ul class="etoiles">
                         <li><i class="fas fa-star"></i></li>
                         <li><i class="fas fa-star"></i></li>
                         <li><i class="fas fa-star"></i></li>
                         <li><i class="fas fa-star"></i></li>
-                        <li><i class="fas fa-star"></i></li>
+                        <li><i class="fas fa-star grey"></i></li>
                     </ul>
                 </div>
             </div>
             <div class="populaire__card">
                 <picture class="populaire__card--img">
-                    <source srcset="./assets/hotel_soleil_matin_m.jpg" media="(min-width: 375px)">
-                    <source srcset="/.assets/hotel_soleil_matin_l.jpg" media="(min-width: 900px)">
-                    <img src="./assets/hotel_soleil_matin_s.jpg" alt="">
+                    <source srcset="./assets/hotel_tout_bleu_et_blanc_m.jpg" media="(min-width: 375px)">
+                    <source srcset="/.assets/hotel_tout_bleu_et_blanc_l.jpg" media="(min-width: 900px)">
+                    <img src="./assets/hotel_tout_bleu_et_blanc_s.jpg" alt="">
                 </picture>
                 <div class="populaire__card--description">
-                    <h5>Hôtel tout bleu et Blanc</h5>
+                    <h3>Hôtel tout bleu et Blanc</h3>
                     <p>Nuit à partir de 68€</p>
                     <ul class="etoiles">
                         <li><i class="fas fa-star"></i></li>
                         <li><i class="fas fa-star"></i></li>
                         <li><i class="fas fa-star"></i></li>
                         <li><i class="fas fa-star"></i></li>
-                        <li><i class="fas fa-star"></i></li>
+                        <li><i class="fas fa-star grey"></i></li>
                     </ul>
                 </div>
             </div>
