Stylling des cards de la section activite

--- a/index.html
+++ b/index.html
@@ -115,9 +115,13 @@
         <section id="hebergements" class="h">
             <h3 class="h--titre">Hébergements à Marseille</h3>
             <div class="h__cards">
-                <div class="h__cards--item">
-                    <div class="h__cards-img"></div>
-                    <div class="h__cards-description">
+                <div class="h__cards__item">
+                    <picture class="h__cards__item--img">
+                        <source srcset="./assets/auberge_cannebiere_m.jpg" media="(min-width: 375px)">
+                        <source srcset="/.assets/auberge_cannebiere_l.jpg" media="(min-width: 900px)">
+                        <img src="./assets/auberge_cannebiere_s.jpg" alt="">
+                    </picture>
+                    <div class="h__cards__description">
                         <h5>Auberge la Cannebière</h5>
                         <p>Nuit à partir de 25€</p>
                         <ul class="etoiles">
@@ -125,12 +129,16 @@
                             <li><i class="fas fa-star"></i></li>
                             <li><i class="fas fa-star"></i></li>
                             <li><i class="fas fa-star"></i></li>
-                            <li><i class="fas fa-star"></i></li>
+                            <li><i class="fas fa-star grey"></i></li>
                         </ul>
-                    </div>
+                    </div>  
                 </div>
                 <div class="h__cards--item">
-                    <div class="h__cards-img"></div>
+                    <picture class="h__cards__item--img">
+                        <source srcset="./assets/auberge_cannebiere_m.jpg" media="(min-width: 375px)">
+                        <source srcset="/.assets/auberge_cannebiere_l.jpg" media="(min-width: 900px)">
+                        <img src="./assets/auberge_cannebiere_s.jpg" alt="">
+                    </picture>
                     <div class="h__cards-description">
                         <h5>Hôtel du port</h5>
                         <p>Nuit à partir de 52€</p>
@@ -144,7 +152,11 @@
                     </div>
                 </div>
                 <div class="h__cards--item">
-                    <div class="h__cards-img"></div>
+                    <picture class="h__cards__item--img">
+                        <source srcset="./assets/auberge_cannebiere_m.jpg" media="(min-width: 375px)">
+                        <source srcset="/.assets/auberge_cannebiere_l.jpg" media="(min-width: 900px)">
+                        <img src="./assets/auberge_cannebiere_s.jpg" alt="">
+                    </picture>
                     <div class="h__cards-description">
                         <h5>Hôtel Les mouettes</h5>
                         <p>Nuit à partir de 76€</p>
@@ -158,7 +170,11 @@
                     </div>
                 </div>
                 <div class="h__cards--item">
-                    <div class="h__cards-img"></div>
+                    <picture class="h__cards__item--img">
+                        <source srcset="./assets/auberge_cannebiere_m.jpg" media="(min-width: 375px)">
+                        <source srcset="/.assets/auberge_cannebiere_l.jpg" media="(min-width: 900px)">
+                        <img src="./assets/auberge_cannebiere_s.jpg" alt="">
+                    </picture>
                     <div class="h__cards-description">
                         <h5>Hôtel de la mer</h5>
                         <p>Nuit à partir de 46€</p>
@@ -172,7 +188,11 @@
                     </div>
                 </div>
                 <div class="h__cards--item">
-                    <div class="h__cards-img"></div>
+                    <picture class="h__cards__item--img">
+                        <source srcset="./assets/auberge_cannebiere_m.jpg" media="(min-width: 375px)">
+                        <source srcset="/.assets/auberge_cannebiere_l.jpg" media="(min-width: 900px)">
+                        <img src="./assets/auberge_cannebiere_s.jpg" alt="">
+                    </picture>
                     <div class="h__cards-description">
                         <h5>Auberge le Panier</h5>
                         <p>Nuit à partir de 23€</p>
@@ -186,7 +206,11 @@
                     </div>
                 </div>
                 <div class="h__cards--item">
-                    <div class="h__cards-img"></div>
+                    <picture class="h__cards__item--img">
+                        <source srcset="./assets/auberge_cannebiere_m.jpg" media="(min-width: 375px)">
+                        <source srcset="/.assets/auberge_cannebiere_l.jpg" media="(min-width: 900px)">
+                        <img src="./assets/auberge_cannebiere_s.jpg" alt="">
+                    </picture>
                     <div class="h__cards-description">
                         <h5>Hôtel chez Amina</h5>
                         <p>Nuit à partir de 96€</p>
