--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <img src="./assets/hotel_soleil_matin_s.jpg" alt="">
                 </picture>
                 <div class="populaire__card--description">
-                    <h3>Hôtel Le soleil du matin</h3>
+                    <h4>Hôtel Le soleil du matin</h4>
                     <p>Nuit à partir de 128€</p>
                     <ul class="etoiles">
                         <li><i class="fas fa-star"></i></li>
@@ -100,7 +100,7 @@
                     <img src="./assets/hotel_tout_bleu_et_blanc_s.jpg" alt="">
                 </picture>
                 <div class="populaire__card--description">
-                    <h3>Hôtel tout bleu et Blanc</h3>
+                    <h4>Hôtel tout bleu et Blanc</h4>
                     <p>Nuit à partir de 68€</p>
                     <ul class="etoiles">
                         <li><i class="fas fa-star"></i></li>
@@ -122,7 +122,7 @@
                         <img src="./assets/auberge_cannebiere_s.jpg" alt="">
                     </picture>
                     <div class="h__cards__description">
-                        <h5>Auberge la Cannebière</h5>
+                        <h4>Auberge la Cannebière</h4>
                         <p>Nuit à partir de 25€</p>
                         <ul class="etoiles">
                             <li><i class="fas fa-star"></i></li>
@@ -133,14 +133,14 @@
                         </ul>
                     </div>  
                 </div>
-                <div class="h__cards--item">
+                <div class="h__cards__item">
                     <picture class="h__cards__item--img">
-                        <source srcset="./assets/auberge_cannebiere_m.jpg" media="(min-width: 375px)">
-                        <source srcset="/.assets/auberge_cannebiere_l.jpg" media="(min-width: 900px)">
-                        <img src="./assets/auberge_cannebiere_s.jpg" alt="">
+                        <source srcset="./assets/hotel_du_port_m.jpg" media="(min-width: 375px)">
+                        <source srcset="/.assets/hotel_du_port_l.jpg" media="(min-width: 900px)">
+                        <img src="./assets/hotel_du_port_s.jpg" alt="">
                     </picture>
-                    <div class="h__cards-description">
-                        <h5>Hôtel du port</h5>
+                    <div class="h__cards__description">
+                        <h3>Hôtel du port</h3>
                         <p>Nuit à partir de 52€</p>
                         <ul class="etoiles">
                             <li><i class="fas fa-star"></i></li>
@@ -151,68 +151,68 @@
                         </ul>
                     </div>
                 </div>
-                <div class="h__cards--item">
+                <div class="h__cards__item">
                     <picture class="h__cards__item--img">
-                        <source srcset="./assets/auberge_cannebiere_m.jpg" media="(min-width: 375px)">
-                        <source srcset="/.assets/auberge_cannebiere_l.jpg" media="(min-width: 900px)">
-                        <img src="./assets/auberge_cannebiere_s.jpg" alt="">
+                        <source srcset="./assets/hotel_les_mouettes_m.jpg" media="(min-width: 375px)">
+                        <source srcset="/.assets/hotel_les_mouettes_l.jpg" media="(min-width: 900px)">
+                        <img src="./assets/hotel_les_mouettes_s.jpg" alt="">
                     </picture>
-                    <div class="h__cards-description">
-                        <h5>Hôtel Les mouettes</h5>
+                    <div class="h__cards__description">
+                        <h3>Hôtel Les mouettes</h3>
                         <p>Nuit à partir de 76€</p>
                         <ul class="etoiles">
                             <li><i class="fas fa-star"></i></li>
                             <li><i class="fas fa-star"></i></li>
                             <li><i class="fas fa-star"></i></li>
                             <li><i class="fas fa-star"></i></li>
-                            <li><i class="fas fa-star"></i></li>
+                            <li><i class="fas fa-star grey"></i></li>
                         </ul>
                     </div>
                 </div>
-                <div class="h__cards--item">
+                <div class="h__cards__item">
                     <picture class="h__cards__item--img">
-                        <source srcset="./assets/auberge_cannebiere_m.jpg" media="(min-width: 375px)">
-                        <source srcset="/.assets/auberge_cannebiere_l.jpg" media="(min-width: 900px)">
-                        <img src="./assets/auberge_cannebiere_s.jpg" alt="">
+                        <source srcset="./assets/hotel_de_la_mer_m.jpg" media="(min-width: 375px)">
+                        <source srcset="/.assets/hotel_de_la_mer_l.jpg" media="(min-width: 900px)">
+                        <img src="./assets/hotel_de_la_mer_s.jpg" alt="">
                     </picture>
-                    <div class="h__cards-description">
-                        <h5>Hôtel de la mer</h5>
+                    <div class="h__cards__description">
+                        <h3>Hôtel de la mer</h3>
                         <p>Nuit à partir de 46€</p>
                         <ul class="etoiles">
                             <li><i class="fas fa-star"></i></li>
                             <li><i class="fas fa-star"></i></li>
                             <li><i class="fas fa-star"></i></li>
-                            <li><i class="fas fa-star"></i></li>
-                            <li><i class="fas fa-star"></i></li>
+                            <li><i class="fas fa-star grey"></i></li>
+                            <li><i class="fas fa-star grey"></i></li>
                         </ul>
                     </div>
                 </div>
-                <div class="h__cards--item">
+                <div class="h__cards__item">
                     <picture class="h__cards__item--img">
-                        <source srcset="./assets/auberge_cannebiere_m.jpg" media="(min-width: 375px)">
-                        <source srcset="/.assets/auberge_cannebiere_l.jpg" media="(min-width: 900px)">
-                        <img src="./assets/auberge_cannebiere_s.jpg" alt="">
+                        <source srcset="./assets/auberge_le_panier_m.jpg" media="(min-width: 375px)">
+                        <source srcset="/.assets/auberge_le_panier_l.jpg" media="(min-width: 900px)">
+                        <img src="./assets/auberge_le_panier_s.jpg" alt="">
                     </picture>
-                    <div class="h__cards-description">
-                        <h5>Auberge le Panier</h5>
+                    <div class="h__cards__description">
+                        <h3>Auberge le Panier</h3>
                         <p>Nuit à partir de 23€</p>
                         <ul class="etoiles">
                             <li><i class="fas fa-star"></i></li>
                             <li><i class="fas fa-star"></i></li>
                             <li><i class="fas fa-star"></i></li>
                             <li><i class="fas fa-star"></i></li>
-                            <li><i class="fas fa-star"></i></li>
+                            <li><i class="fas fa-star grey"></i></li>
                         </ul>
                     </div>
                 </div>
-                <div class="h__cards--item">
+                <div class="h__cards__item">
                     <picture class="h__cards__item--img">
-                        <source srcset="./assets/auberge_cannebiere_m.jpg" media="(min-width: 375px)">
-                        <source srcset="/.assets/auberge_cannebiere_l.jpg" media="(min-width: 900px)">
-                        <img src="./assets/auberge_cannebiere_s.jpg" alt="">
+                        <source srcset="./assets/hotel_chez_amina_m.jpg" media="(min-width: 375px)">
+                        <source srcset="/.assets/hotel_chez_amina_l.jpg" media="(min-width: 900px)">
+                        <img src="./assets/hotel_chez_amina_s.jpg" alt="">
                     </picture>
-                    <div class="h__cards-description">
-                        <h5>Hôtel chez Amina</h5>
+                    <div class="h__cards__description">
+                        <h3>Hôtel chez Amina</h3>
                         <p>Nuit à partir de 96€</p>
                         <ul class="etoiles">
                             <li><i class="fas fa-star"></i></li>
