finition version mobile

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <p class="search--sous-titre" >En plein centre ville ou en plaine nature</p>
                 <div class="search__box">
                     <div class="search__box--icon" ><i class="fas fa-map-marker-alt fa-lg"></i></div>
-                    <input class="search__box--input" type="text">
+                    <input class="search__box--input" type="text" placeholder="Marseille, France">
                     <button class="search__box--btn" ><i class="fas fa-search fa-lg"></i><span>Rechercher</span></button>
                 </div>
                 <div class="search__filters">
@@ -59,9 +59,9 @@
             </div>
             <div class="populaire__card">
                 <picture class="populaire__card--img">
-                    <source srcset="./assets/hotel_soleil_matin_m.jpg" media="(min-width: 375px)">
-                    <source srcset="/.assets/hotel_soleil_matin_l.jpg" media="(min-width: 900px)">
-                    <img src="./assets/hotel_soleil_matin_s.jpg" alt="">
+                    <source srcset="./assets/hebergement/hotel_soleil_matin_m.jpg" media="(min-width: 376px)">
+                    <source srcset="/.assets/hebergement/hotel_soleil_matin_l.jpg" media="(min-width: 900px)">
+                    <img src="./assets/hebergement/hotel_soleil_matin_s.jpg" alt="">
                 </picture>
                 <div class="populaire__card--description">
                     <h4>Hôtel Le soleil du matin</h4>
@@ -77,9 +77,9 @@
             </div>
             <div class="populaire__card">
                 <picture class="populaire__card--img">
-                    <source srcset="./assets/au_coeur_de_leau_m.jpg" media="(min-width: 375px)">
-                    <source srcset="/.assets/au_coeur_de_leau_l.jpg" media="(min-width: 900px)">
-                    <img src="./assets/au_coeur_de_leau_s.jpg" alt="">
+                    <source srcset="./assets/hebergement/au_coeur_de_leau_m.jpg" media="(min-width: 376px)">
+                    <source srcset="/.assets/hebergement/au_coeur_de_leau_l.jpg" media="(min-width: 900px)">
+                    <img src="./assets/hebergement/au_coeur_de_leau_s.jpg" alt="">
                 </picture>
                 <div class="populaire__card--description">
                     <h4>Au coeur de l'eau Chambre d'hôtes</h4>
@@ -95,9 +95,9 @@
             </div>
             <div class="populaire__card">
                 <picture class="populaire__card--img">
-                    <source srcset="./assets/hotel_tout_bleu_et_blanc_m.jpg" media="(min-width: 375px)">
-                    <source srcset="/.assets/hotel_tout_bleu_et_blanc_l.jpg" media="(min-width: 900px)">
-                    <img src="./assets/hotel_tout_bleu_et_blanc_s.jpg" alt="">
+                    <source srcset="./assets/hebergement/hotel_tout_bleu_et_blanc_m.jpg" media="(min-width: 376px)">
+                    <source srcset="/.assets/hebergement/hotel_tout_bleu_et_blanc_l.jpg" media="(min-width: 900px)">
+                    <img src="./assets/hebergement/hotel_tout_bleu_et_blanc_s.jpg" alt="">
                 </picture>
                 <div class="populaire__card--description">
                     <h4>Hôtel tout bleu et Blanc</h4>
@@ -117,9 +117,9 @@
             <div class="h__cards">
                 <div class="h__cards__item">
                     <picture class="h__cards__item--img">
-                        <source srcset="./assets/auberge_cannebiere_m.jpg" media="(min-width: 375px)">
-                        <source srcset="/.assets/auberge_cannebiere_l.jpg" media="(min-width: 900px)">
-                        <img src="./assets/auberge_cannebiere_s.jpg" alt="">
+                        <source srcset="./assets/hebergement/auberge_cannebiere_m.jpg" media="(min-width: 376px)">
+                        <source srcset="/.assets/hebergement/auberge_cannebiere_l.jpg" media="(min-width: 900px)">
+                        <img src="./assets/hebergement/auberge_cannebiere_s.jpg" alt="">
                     </picture>
                     <div class="h__cards__description">
                         <h4>Auberge la Cannebière</h4>
@@ -135,9 +135,9 @@
                 </div>
                 <div class="h__cards__item">
                     <picture class="h__cards__item--img">
-                        <source srcset="./assets/hotel_du_port_m.jpg" media="(min-width: 375px)">
-                        <source srcset="/.assets/hotel_du_port_l.jpg" media="(min-width: 900px)">
-                        <img src="./assets/hotel_du_port_s.jpg" alt="">
+                        <source srcset="./assets/hebergement/hotel_du_port_m.jpg" media="(min-width: 376px)">
+                        <source srcset="/.assets/hebergement/hotel_du_port_l.jpg" media="(min-width: 900px)">
+                        <img src="./assets/hebergement/hotel_du_port_s.jpg" alt="">
                     </picture>
                     <div class="h__cards__description">
                         <h3>Hôtel du port</h3>
@@ -153,9 +153,9 @@
                 </div>
                 <div class="h__cards__item">
                     <picture class="h__cards__item--img">
-                        <source srcset="./assets/hotel_les_mouettes_m.jpg" media="(min-width: 375px)">
-                        <source srcset="/.assets/hotel_les_mouettes_l.jpg" media="(min-width: 900px)">
-                        <img src="./assets/hotel_les_mouettes_s.jpg" alt="">
+                        <source srcset="./assets/hebergement/hotel_les_mouettes_m.jpg" media="(min-width: 376px)">
+                        <source srcset="/.assets/hebergement/hotel_les_mouettes_l.jpg" media="(min-width: 900px)">
+                        <img src="./assets/hebergement/hotel_les_mouettes_s.jpg" alt="">
                     </picture>
                     <div class="h__cards__description">
                         <h3>Hôtel Les mouettes</h3>
@@ -171,9 +171,9 @@
                 </div>
                 <div class="h__cards__item">
                     <picture class="h__cards__item--img">
-                        <source srcset="./assets/hotel_de_la_mer_m.jpg" media="(min-width: 375px)">
-                        <source srcset="/.assets/hotel_de_la_mer_l.jpg" media="(min-width: 900px)">
-                        <img src="./assets/hotel_de_la_mer_s.jpg" alt="">
+                        <source srcset="./assets/hebergement/hotel_de_la_mer_m.jpg" media="(min-width: 376px)">
+                        <source srcset="/.assets/hebergement/hotel_de_la_mer_l.jpg" media="(min-width: 900px)">
+                        <img src="./assets/hebergement/hotel_de_la_mer_s.jpg" alt="">
                     </picture>
                     <div class="h__cards__description">
                         <h3>Hôtel de la mer</h3>
@@ -189,9 +189,9 @@
                 </div>
                 <div class="h__cards__item">
                     <picture class="h__cards__item--img">
-                        <source srcset="./assets/auberge_le_panier_m.jpg" media="(min-width: 375px)">
-                        <source srcset="/.assets/auberge_le_panier_l.jpg" media="(min-width: 900px)">
-                        <img src="./assets/auberge_le_panier_s.jpg" alt="">
+                        <source srcset="./assets/hebergement/auberge_le_panier_m.jpg" media="(min-width: 376px)">
+                        <source srcset="/.assets/hebergement/auberge_le_panier_l.jpg" media="(min-width: 900px)">
+                        <img src="./assets/hebergement/auberge_le_panier_s.jpg" alt="">
                     </picture>
                     <div class="h__cards__description">
                         <h3>Auberge le Panier</h3>
@@ -207,9 +207,9 @@
                 </div>
                 <div class="h__cards__item">
                     <picture class="h__cards__item--img">
-                        <source srcset="./assets/hotel_chez_amina_m.jpg" media="(min-width: 375px)">
-                        <source srcset="/.assets/hotel_chez_amina_l.jpg" media="(min-width: 900px)">
-                        <img src="./assets/hotel_chez_amina_s.jpg" alt="">
+                        <source srcset="./assets/hebergement/hotel_chez_amina_m.jpg" media="(min-width: 376px)">
+                        <source srcset="/.assets/hebergement/hotel_chez_amina_l.jpg" media="(min-width: 900px)">
+                        <img src="./assets/hebergement/hotel_chez_amina_s.jpg" alt="">
                     </picture>
                     <div class="h__cards__description">
                         <h3>Hôtel chez Amina</h3>
@@ -231,28 +231,52 @@
             <h3 class="activites--titre">Activités à Marseille</h3>
             <div class="activites__bloc">
                 <div class="activites__bloc--card">
-                    <div class="activites__bloc--card-img"></div>
-                    <div class="activites__bloc--card-nom">Vieux Port</div>
+                    <picture class="activites__bloc--card--img">
+                        <source srcset="./assets/activite/vieux_port_m.jpg" media="(min-width: 376px)">
+                        <source srcset="/.assets/activite/vieux_port_l.jpg" media="(min-width: 900px)">
+                        <img src="./assets/activite/vieux_port.jpg" alt="">
+                    </picture>
+                    <h3 class="activites__bloc--card--nom">Vieux Port</h3>
                 </div>
                 <div class="activites__bloc--card">
-                    <div class="activites__bloc--card-img"></div>
-                    <div class="activites__bloc--card-nom">Fort de Pomègues</div>
+                    <picture class="activites__bloc--card--img">
+                        <source srcset="./assets/activite/fort_pomegues_m.jpg" media="(min-width: 376px)">
+                        <source srcset="/.assets/activite/fort_pomegues_l.jpg" media="(min-width: 900px)">
+                        <img src="./assets/activite/fort_pomegues_s.jpg" alt="">
+                    </picture>
+                    <h3 class="activites__bloc--card--nom">Fort de Pomègues</h3>
                 </div>
                 <div class="activites__bloc--card">
-                    <div class="activites__bloc--card-img"></div>
-                    <div class="activites__bloc--card-nom">Îles du Frioul</div>
+                    <picture class="activites__bloc--card--img">
+                        <source srcset="./assets/activite/iles_du_frioul_m.jpg" media="(min-width: 376px)">
+                        <source srcset="/.assets/activite/iles_du_frioul_l.jpg" media="(min-width: 900px)">
+                        <img src="./assets/activite/iles_du_frioul_s.jpg" alt="">
+                    </picture>
+                    <h3 class="activites__bloc--card--nom">Îles du Frioul</h3>
                 </div>
                 <div class="activites__bloc--card">
-                    <div class="activites__bloc--card-img"></div>
-                    <div class="activites__bloc--card-nom">Parc National des Calanques</div>
+                    <picture class="activites__bloc--card--img">
+                        <source srcset="./assets/activite/calanques_m.jpg" media="(min-width: 376px)">
+                        <source srcset="/.assets/activite/calanques_l.jpg" media="(min-width: 900px)">
+                        <img src="./assets/activite/calanques_s.jpg" alt="">
+                    </picture>
+                    <h3 class="activites__bloc--card--nom">Parc National des Calanques</h3>
                 </div>
                 <div class="activites__bloc--card">
-                    <div class="activites__bloc--card-img"></div>
-                    <div class="activites__bloc--card-nom">Notre-Dame-de-la-Garde</div>
+                    <picture class="activites__bloc--card--img">
+                        <source srcset="./assets/activite/dame_de_la_garde_m.jpg" media="(min-width: 376px)">
+                        <source srcset="/.assets/activite/dame_de_la_garde_l.jpg" media="(min-width: 900px)">
+                        <img src="./assets/activite/dame_de_la_garde_s.jpg" alt="">
+                    </picture>
+                    <h3 class="activites__bloc--card--nom">Notre-Dame-de-la-Garde</h3>
                 </div>
                 <div class="activites__bloc--card">
-                    <div class="activites__bloc--card-img"></div>
-                    <div class="activites__bloc--card-nom">Parc Longchamp</div>
+                    <picture class="activites__bloc--card--img">
+                        <source srcset="./assets/activite/parc_longchamps_m.jpg" media="(min-width: 376px)">
+                        <source srcset="/.assets/activite/parc_longchamps_l.jpg" media="(min-width: 900px)">
+                        <img src="./assets/activite/parc_longchamps_s.jpg" alt="">
+                    </picture>
+                    <h3 class="activites__bloc--card--nom">Parc Longchamp</h3>
                 </div>
             </div>
         </section>
